--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alexia Putellas</title>
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
@@ -23,6 +23,10 @@
       <img src="images/AP-header.jpeg" src="Alexia cheering, wearing FC Barcelona Femeni's Third Kit during their Champions League campaign for the 2021-22 season">
     </div>
     <h2 class="title-sub">La Reina</h2>
+
+    <p>Date/Time: <span id="datetime"></span></p>
+
+
   </header>
 
   <nav>
