changed src to alt

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
     </div>
     <div class="title-img">
-      <img src="images/AP-header.jpeg" src="Alexia cheering, wearing FC Barcelona Femeni's Third Kit during their Champions League campaign for the 2021-22 season">
+      <img src="images/AP-header.jpeg" alt="Alexia cheering, wearing FC Barcelona Femeni's Third Kit during their Champions League campaign for the 2021-22 season">
     </div>
     <h2 class="title-sub">La Reina</h2>
 
