--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="general-bio">
     <h3 class="bio-title">Alexia</h3>
       <div class="container">
-        <img src="/images/AP-Bio.jpeg" alt="Alexia Putellas holding her Ballon D'Or trophy">
+        <img src="images/AP-Bio.jpeg" alt="Alexia Putellas holding her Ballon D'Or trophy">
           <p>Alexia Putellas Segura was born on 4 February 1994 in Mollet del Vallès, a municipality in the province of Barcelona. Putellas has been a supporter of FC Barcelona since her early childhood. As a child, Putellas would travel with the Penya of Mollet del Vallès to watch Barcelona's matches at the Camp Nou with her father.</p>
           <p>Despite being born into a basketball-playing family, Putellas first began playing football in 2001 aged six. The first club she played for was with CE Sabadell, after she was enrolled through a family friend who played for the club. In 2005, Putellas spent a year in FC Barcelona's Youth Academy. When she was twelve, Putellas joined the youth teams of RCD Espanyol, where she stayed for four years.</p>
        </div>
@@ -52,7 +52,7 @@
   <section id="barcelona-bio">
     <h3 class="bio-title">FC Barclona Femeni</h3>
     <div class="container">
-      <img id="barca-img" src="/images/AP-Culers.jpeg" alt="Alexia cheering mid-match wearing FC Barcelona Femeni's homekit, during the 2021-22 season">
+      <img id="barca-img" src="images/AP-Culers.jpeg" alt="Alexia cheering mid-match wearing FC Barcelona Femeni's homekit, during the 2021-22 season">
       <p>varius mattis enim eu euismod. Ut leo enim, consequat nec libero in, lacinia mattis tortor. In tempus nec sem nec aliquam. Nunc id dolor dignissim, iaculis nisi ac, sollicitudin sapien. Quisque interdum pellentesque dui ut auctor. In hac habitasse platea dictumst. In hac habitasse platea dictumst. Integer sodales massa est, ut egestas est lobortis vitae. Ut non leo fringilla, porta elit non, placerat nisi. Suspendisse quis molestie neque.</p>
       <p>Suspendisse et risus at lacus ornare facilisis vitae a mi. Curabitur vitae condimentum ex. Donec at purus lectus. Aenean non lacus sed est blandit molestie eget vel libero. In lectus tortor, varius pharetra eros sed, scelerisque interdum ligula. Nam laoreet ac massa vitae consequat. Vestibulum scelerisque fermentum tellus, dapibus congue metus pretium nec. Vestibulum bibendum, lorem auctor porttitor suscipit, massa tortor maximus nulla, sed commodo sem augue sed orci. Quisque at ante est. Fusce non nibh arcu. Donec ac eleifend libero. Donec volutpat id est sed scelerisque. Fusce in semper odio. Cras lacinia sem vel ex egestas, non faucibus nisi mattis.</p>
     
@@ -63,7 +63,7 @@
   <section id="spain-bio">
     <h3 class="bio-title">Spain</h3>
     <div class="container"> 
-      <img src="/images/AP-Spain.jpeg" alt="Alexia holding a bottle of champagne after winning Player of the Match at the Arnold Clark Cup in February 2022">
+      <img src="images/AP-Spain.jpeg" alt="Alexia holding a bottle of champagne after winning Player of the Match at the Arnold Clark Cup in February 2022">
       <p>varius mattis enim eu euismod. Ut leo enim, consequat nec libero in, lacinia mattis tortor. In tempus nec sem nec aliquam. Nunc id dolor dignissim, iaculis nisi ac, sollicitudin sapien. Quisque interdum pellentesque dui ut auctor. In hac habitasse platea dictumst. In hac habitasse platea dictumst. Integer sodales massa est, ut egestas est lobortis vitae. Ut non leo fringilla, porta elit non, placerat nisi. Suspendisse quis molestie neque.</p>
       <p>Suspendisse et risus at lacus ornare facilisis vitae a mi. Curabitur vitae condimentum ex. Donec at purus lectus. Aenean non lacus sed est blandit molestie eget vel libero. In lectus tortor, varius pharetra eros sed, scelerisque interdum ligula. Nam laoreet ac massa vitae consequat. Vestibulum scelerisque fermentum tellus, dapibus congue metus pretium nec. Vestibulum bibendum, lorem auctor porttitor suscipit, massa tortor maximus nulla, sed commodo sem augue sed orci. Quisque at ante est. Fusce non nibh arcu. Donec ac eleifend libero. Donec volutpat id est sed scelerisque. Fusce in semper odio. Cras lacinia sem vel ex egestas, non faucibus nisi mattis.</p>
     </div>
