--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <h2 class="title-sub">La Reina</h2>
 
-    <p>Date/Time: <span id="datetime"></span></p>
+    <!--<p>Date/Time: <span id="datetime"></span></p>-->
 
 
   </header>
