added time script

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <h2 class="title-sub">La Reina</h2>
 
-    <!--<p>Date/Time: <span id="datetime"></span></p>-->
+    <div id="clock">8:10:45</div>
 
 
   </header>
@@ -72,5 +72,6 @@
   <footer>
 
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
