--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alexia Putellas</title>
+  <title>Alexia Putellas |  👑</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
     </div>
     <h2 class="title-sub">La Reina</h2>
 
-    <div id="clock">8:10:45</div>
+    
 
 
   </header>
@@ -37,7 +37,10 @@
       <li><a href="#">Fruit Shop</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Feature</a></li>
+      <li><div id="clock">xx:xx:xx</div></li>
+      <li><div id="date">xx/xx/xxxx</div></li>
     </ul>
+    
   </nav>
 
   <section id="general-bio">
